# SPDX-FileCopyrightText: 2023 embr <git@liclac.eu>
# SPDX-FileCopyrightText: 2024 Wavelens UG <info@wavelens.io>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "nix-daemon"
version = "0.1.1"
edition = "2021"
license = "EUPL-1.2"
authors = ["embr <git@liclac.eu>", "Wavelens UG <info@wavelens.io>"]
description = "A library for talking directly to the Nix Daemon"
repository = "https://github.com/wavelens/nix-daemon/branches"
keywords = ["nix"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
bytes = "1.9"
chrono = "0.4"
futures = "0.3"
num_enum = "0.7"
tap = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt", "macros", "parking_lot", "io-util", "net"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
